# HuffmanAlgorithm

./: .gitignore  CMakeLists.txt
src/: Huffman.hpp  MinHeap.hpp  helpers.h  main.cpp  tree.h
